# Adaptive-Neural-Force-Field-with-Dynamic-Ensemble-Switching

./: .gitignore  LICENSE  README.md  essage_passing.py  padding.py  pyproject.toml  switcher.py
benchmarks/: benchmark_padding_memory.py
configs/: default.yaml  tpu_pod.yaml
docs/: architecture.md  complexity_analysis.md
scripts/: evaluate.py  train.py
src/: init.py
src/core/: forcefield.py  init.py
src/ensemble/: init.py
src/kernels/: cublas_wrapper.py  init.py  neighbor_list.py
src/utils/: init.py  sharding.py
tests/: init.py  test_ensemble.py  test_forcefield.py  test_neighbor_list.py  test_padding.py  test_sharding.py
