[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "anff"
version     = "0.1.0"
description = "Adaptive Neural Force Field with Dynamic Ensemble Switching"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "MIT" }

authors = [
  { name = "ANFF Contributors" },
]

keywords = [
  "molecular dynamics", "force field", "JAX", "neural network potential",
  "GFN2-xTB", "TPU", "XLA",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "optax>=0.2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.9",
  "pre-commit>=3.7",
]
cuda = [
  "jax[cuda12]>=0.4.25",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.scripts]
anff-train    = "scripts.train:main"
anff-evaluate = "scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]   # long lines handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version  = "3.10"
strict          = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source  = ["src"]
omit    = ["tests/*", "benchmarks/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
